Fixing spacing issues

--- a/Droom-FrontEnd/less/global.less
+++ b/Droom-FrontEnd/less/global.less
@@ -1,53 +1,51 @@
 // General Styles
 * {
-    box-sizing: border-box;
-  }
-  
-  html {
-    font-size: 62.5%;
-  }
-  
-  html, body {
-    font-family: 'Work Sans', sans-serif;
-    color: black;
-  }
-  
-  h1, h2, h3, h4, h5 {
-    font-family: inherit;
-    color: black;
-  }
+  box-sizing: border-box;
+}
 
-  h1 {
-      font-size: 3.6rem;
-  }
+html {
+  font-size: 62.5%;
+}
 
-  h2 {
-    font-size: 3rem;
-  }
-  
-  h3 {
-    font-size: 2.8rem;
-  }
-  
-  p {
-    font-size: 1.4rem;
-    line-height: 1.4;
-  }
-  
-  a {
-      text-decoration: none;
-      font-size: 1.8rem;
-      color:black;
-
-      &:hover{
-        color:red;
-      }
-  }
+html, body {
+  width:100%;
+  font-family: 'Work Sans', sans-serif;
+  color: black;
+}
 
 
-  .container {
-    width: 100%;
-    margin: 0 auto;  
-  }
-  
-  
+h1, h2, h3, h4, h5 {
+  font-family: inherit;
+  color: black;
+}
+
+h1 {
+    font-size: 3.6rem;
+}
+
+h2 {
+  font-size: 3rem;
+}
+
+h3 {
+  font-size: 2.8rem;
+}
+
+p {
+  font-size: 1.4rem;
+  line-height: 1.4;
+}
+
+a {
+    text-decoration: none;
+    font-size: 1.8rem;
+    color:black;
+
+    &:hover{
+      color:red;
+    }
+}
+
+
+
+
