--- a/Droom-FrontEnd/less/home-page.less
+++ b/Droom-FrontEnd/less/home-page.less
@@ -1,7 +1,7 @@
 .container{
-    width:100%;
+    // width:100%;
     margin:0 auto;
-    padding:0 2rem;
+    padding:0 5rem;
 
 }
 
@@ -11,6 +11,10 @@
     justify-content: center;
     align-items: center;
 
+    img{
+        width:1900px;
+      }
+
 
     .splashHolder{
         // border: 1px solid red;
@@ -18,6 +22,19 @@
         width:100%;
         padding: 0;
         
+    }
+
+    .CTA{
+        
+        position: absolute;
+        width: 30%;
+        text-align: center;
+    }
+
+    a{
+        .buttonStyle;
+        margin: 20rem auto;
+
     }
 }
 
