--- a/Droom-FrontEnd/less/variables.less
+++ b/Droom-FrontEnd/less/variables.less
@@ -1,21 +1,29 @@
 
 
-@main-background:@Shell;
+@main-background:@shell;
 
-@button-bg: @Brass;
-@button-font-color: @Brass;
+@button-bg: @brass;
+@button-font-color: black;
 
-@button-bg-hover:@Laurel-Green;
+@button-bg-hover:@laurel-green;
 @button-font-hover:black;
+
+
+@step-two-bg:@laurel-green;
+
+@step-three-bg:@dark-sienna;
+@step-three-font:@shell;
 
 
 /* Colors */
 @dark-sienna: #30011E;
-@Nyanza:#D7FCD4;
-@Laurel-Green:#B6CCA1;
-@Brass:#B68F40;
-@Davy-Grey:#545454;
-@Shell:#ecedee;
+@nyanza:#D7FCD4;
+@laurel-green:#B6CCA1;
+@brass:#B68F40;
+@davy-grey:#545454;
+@shell:#ecedee;
 
+
+@web: ~"{max-width:1940px)";
 @mobile: ~"(max-width:501px)";
 @tablet: ~"(max-width:800px)";
